--- a/package.json
+++ b/package.json
@@ -8,11 +8,36 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.2.0",
+    "@react-native-community/masked-view": "0.1.6",
+    "@react-navigation/bottom-tabs": "^5.5.1",
+    "@react-navigation/drawer": "^5.8.1",
+    "@react-navigation/native": "^5.5.0",
+    "@react-navigation/stack": "^5.4.1",
+    "@ui-kitten/components": "^5.0.0",
     "expo": "~37.0.3",
+    "expo-font": "^8.1.1",
+    "expo-image-picker": "~8.1.0",
+    "firebase": "^7.16.0",
+    "formik": "^2.1.4",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-loading-spinner-overlay": "^1.1.0",
+    "react-native-modal": "^11.5.6",
+    "react-native-paper": "^3.10.1",
+    "react-native-reanimated": "~1.7.0",
+    "react-native-safe-area-context": "0.7.3",
+    "react-native-screens": "~2.2.0",
+    "react-native-svg": "^12.1.0",
+    "react-native-ui-kitten": "^4.4.1",
+    "react-native-web": "~0.11.7",
+    "react-navigation-header-buttons": "^4.0.2",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "yup": "^0.29.1"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
